Split map into travel section

--- a/src/app/components/app.htm
+++ b/src/app/components/app.htm
@@ -6,6 +6,7 @@
     <skills></skills>
     <experience></experience>
     <education></education>
+    <travel></travel>
     <contact></contact>
   </main>
   <footer></footer>
