--- a/src/contact/components/contact.htm
+++ b/src/contact/components/contact.htm
@@ -2,11 +2,10 @@
 <section class="contact" id="contact">
   <div class="container top-container">
     <div class="heading">
-      <h2 class="js_trigger_map_marker">Get In Touch</h2>
+      <h2>Get In Touch</h2>
       <p>contact me to have a chat</p>
     </div>
   </div>
-  <googlemap></googlemap>
 </section>
 <section class="contact-details" id="contact-form">
   <div class="container">
@@ -15,14 +14,14 @@
       <h4 class="js_trigger_map_marker">Contact details</h4>
       <p>
         <i class="icon-location icon-lg"></i>&nbsp;
-        <a href="#address"
-           id="js_click_address"
-           class="js_track_link_click"
-           aria-label="Address">Brooklyn, Wellington, New Zealand</a>
+        Brooklyn, Wellington, New Zealand
       </p>
       <p>
         <i class="icon-phone icon-lg"></i>&nbsp;
-        +64 22 031 3927
+        <a href="tel:+64220313927"
+           class="js_track_link_click"
+           itemscope="tel"
+           aria-label="Telephone">+64 22 031 3927</a>
       </p>
       <p>
         <i class="icon-link icon-lg"></i>&nbsp;
