--- a/src/header/components/header.htm
+++ b/src/header/components/header.htm
@@ -38,6 +38,7 @@
                 <li class="menu-item"><a href="#skills" class="js_track_link_click">Skills</a></li>
                 <li class="menu-item"><a href="#experience" class="js_track_link_click">Experience</a></li>
                 <li class="menu-item"><a href="#education" class="js_track_link_click">Education</a></li>
+                <li class="menu-item"><a href="#travel" class="js_track_link_click">Travel</a></li>
                 <li class="menu-item"><a href="#contact" class="js_track_link_click">Contact</a></li>
                 <li class="menu-item" id="js_links_li"><a href="#links" class="js_track_link_click">Links</a></li>
               </ul>
