--- a/src/experience/components/experience.scss
+++ b/src/experience/components/experience.scss
@@ -6,9 +6,8 @@
 
 .experience {
   background: $white;
-  @include container-heading();
 
-  .container {
+  @include container-heading() {
     h2 {
       color: $bitter-sweet;
     }
@@ -16,13 +15,12 @@
       color: $manatee;
       line-height: 18px;
     }
-    .heading p {
-      padding-bottom: 41px;
-    }
     h4 {
       font-weight: 700;
     }
+  };
 
+  .container {
     .work-details {
       .right-area {
         padding-bottom: 47px;
